# kafka-workflow

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
k8s/: api-deployment.yaml  kafka.yaml  zookeeper.yaml
src/api/: main.py
src/consumer/: main.py
src/kafka_workflow/api/: main.py
src/kafka_workflow/consumer/: main.py
src/kafka_workflow/producer/: main.py
src/producer/: main.py
src/schemas/: messages.py
src/shared/schemas/: serializers.py
src/shared/utils/: logger.py
src/utils/: logger.py
tests/integration/: conftest.py  test_consume.py  test_produce.py
